--- a/config_automation.yml
+++ b/config_automation.yml
@@ -1,14 +1,20 @@
-# Formatting Checks (run at pull request)
-check-quizzes: yes
-url-checker: yes
-render-preview: yes
-style-and-sp-check: yes
 
-# Rendering
+##### Checks run at pull request #####
+# Check quiz formatting
+check-quizzes: yes
+# Check that urls in the content are not broken
+url-checker: yes
+# Render preview of content with changes (Rmd's and md's are checked)
+render-preview: yes
+# Spell check Rmds and quizzes
+spell-check: yes
+# Style any R code
+style-code: yes
+# Test build the docker image if any docker-relevant files have been changed
+docker-test: yes
+
+##### Renderings run upon merge to main branch #####
+# Rendering each platform's content
 render-bookdown: yes
 render-leanpub: yes
 render-coursera: yes
-
-# Docker specific
-docker-build: yes
- 
