restore to correct file path

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -5,7 +5,7 @@ group:
   - files:
       - source: config_automation.yml
         dest: config_automation.yml
-      - source: workflows/
+      - source: .github/workflows/
         dest: .github/workflows/
         deleteOrphaned: true
       - source: scripts/
