--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -61,7 +61,7 @@ jobs:
           exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
           if [[ $exists == 0 ]];then
             echo branch doesnt exist
-            git checkout -b $branch_name
+            git checkout -b $branch_name || echo branch exists
             git push --set-upstream origin $branch_name
           else
             echo branch does exist
