--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,6 +29,22 @@ jobs:
              docker/Dockerfile
              docker/github_package_list.tsv
 
+      - name: Make branch if it doesn't exist
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
+          branch_name='preview-${{ github.event.pull_request.number }}'
+          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
+          if [[ $exists == 0 ]];then
+            echo branch doesnt exist
+            git checkout -b $branch_name || echo branch exists
+            git push --set-upstream origin $branch_name
+          else
+            echo branch does exist
+          fi
+        shell: bash
+
     outputs:
       toggle_spell_check: "${{ env.SPELL_CHECK }}"
       toggle_style_code: "${{ env.STYLE_CODE }}"
@@ -58,17 +74,9 @@ jobs:
           git config --local user.name "jhudsl-robot"
 
           branch_name='preview-${{ github.event.pull_request.number }}'
-          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
-          if [[ $exists == 0 ]];then
-            echo branch doesnt exist
-            git checkout -b $branch_name || echo branch exists
-            git push --set-upstream origin $branch_name
-          else
-            echo branch does exist
-            git fetch --all
-            git checkout $branch_name
-            git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
-          fi
+          git fetch --all
+          git checkout $branch_name
+          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
         shell: bash
 
       - name: Run spell check
@@ -214,17 +222,9 @@ jobs:
           git config --local user.name "jhudsl-robot"
 
           branch_name='preview-${{ github.event.pull_request.number }}'
-          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
-          if [[ $exists == 0 ]];then
-            echo branch doesnt exist
-            git checkout -b $branch_name
-            git push --set-upstream origin $branch_name
-          else
-            echo branch does exist
-            git fetch --all
-            git checkout $branch_name
-            git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
-          fi
+          git fetch --all
+          git checkout $branch_name
+          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
         shell: bash
 
       - name: Run quiz check
@@ -320,20 +320,14 @@ jobs:
           git config --local user.name "jhudsl-robot"
 
           branch_name='preview-${{ github.event.pull_request.number }}'
-          exists=$(git ls-remote https://${{ secrets.GH_PAT }}@github.com/$GITHUB_REPOSITORY $branch_name | wc -l | xargs)
-          if [[ $exists == 0 ]];then
-            echo branch doesnt exist
-            git checkout -b $branch_name
-            git push --set-upstream origin $branch_name
-          else
-            echo branch does exist
-            git fetch --all
-            git checkout $branch_name
-            git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
-          fi
-
-          rm -r docs/*
+          git fetch --all
+          git checkout $branch_name
+          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
         shell: bash
+
+      - name: Remove docs/*
+        id: bookdown
+        run: rm -r docs/*
 
       # Run bookdown rendering
       - name: Run bookdown render
