update id again

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -326,7 +326,7 @@ jobs:
         shell: bash
 
       - name: Remove docs/*
-        id: remove docs
+        id: remove
         run: rm -r docs/*
 
       # Run bookdown rendering
