--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -16,6 +16,12 @@ jobs:
         run: sleep 300s
         shell: bash
 
+      # Check out current repository
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          
       # Delete the branch!
       - name: Delete branch locally and remotely
         run: |
