--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -52,7 +52,7 @@ group:
       tmm211/dsp-terra-mooc-test2
 ###ADD NEW REPO HERE following the format above#
 
-### This is a custom group for this repo which doesn't want syncing on all the files ###
+### These are custom groups for syncing -- not all files needs to be synced
   - files:
     - source: config_automation.yml
       dest: config_automation.yml
@@ -62,3 +62,19 @@ group:
       dest: scripts/spell-check.R
     repos: |
       jhudsl/OTTR_Template_Website
+
+  - files:
+      - source: .github/workflows/delete-preview.yml
+        dest: .github/workflows/delete-preview.yml
+      - source: .github/workflows/send-updates.yml
+        dest: .github/workflows/send-updates.yml
+      - source: .github/workflows/test-send-updates.yml
+        dest: .github/workflows/test-send-updates.yml
+      - source: scripts/make_screenshots.R
+        dest: scripts/make_screenshots.R
+      - source: scripts/spell-check.R
+        dest: scripts/spell-check.R
+      - source: scripts/switch_sync_repo.R
+        dest: scripts/switch_sync_repo.R
+    repos: |
+      jhudsl/OTTR_Quizzes
