--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -8,21 +8,13 @@ group:
       - source: .github/workflows/
         dest: .github/workflows/
         deleteOrphaned: true
+        exclude: |
+          send-updates.yml
+          test-send-updates.yml
+          starting-course.yml
       - source: scripts/
         dest: scripts/
         deleteOrphaned: true
-      - source: .github/workflows/pull-request.yml
-        dest: .github/workflows/pull-request.yml
-      - source: .github/workflows/render-all.yml
-        dest: .github/workflows/render-all.yml
-      - source: .github/workflows/docker-build.yml
-        dest: .github/workflows/docker-build.yml
-      - source: .github/workflows/transfer-rendered-files.yml
-        dest: .github/workflows/transfer-rendered-files.yml
-      - source: .github/workflows/release-notes.yml
-        dest: .github/workflows/release-notes.yml
-      - source: .github/workflows/delete-preview.yml
-        dest: .github/workflows/delete-preview.yml
       - source: .github/ISSUE_TEMPLATE/course-problem-report.md
         dest: .github/ISSUE_TEMPLATE/course-problem-report.md
       - source: .github/ISSUE_TEMPLATE/course-content-add.md
@@ -60,11 +52,29 @@ group:
       tmm211/dsp-terra-mooc-test2
 ###ADD NEW REPO HERE following the format above#
 
-### This is a custom group for this repo which doesn't want syncing on all the files ###
+### These are custom groups for syncing -- not all files needs to be synced
   - files:
+    - source: config_automation.yml
+      dest: config_automation.yml
     - source: .github/workflows/pull-request.yml
       dest: .github/workflows/pull-request.yml
     - source: scripts/spell-check.R
       dest: scripts/spell-check.R
     repos: |
       jhudsl/OTTR_Template_Website
+
+  - files:
+      - source: .github/workflows/delete-preview.yml
+        dest: .github/workflows/delete-preview.yml
+      - source: .github/workflows/send-updates.yml
+        dest: .github/workflows/send-updates.yml
+      - source: .github/workflows/test-send-updates.yml
+        dest: .github/workflows/test-send-updates.yml
+      - source: scripts/make_screenshots.R
+        dest: scripts/make_screenshots.R
+      - source: scripts/spell-check.R
+        dest: scripts/spell-check.R
+      - source: scripts/switch_sync_repo.R
+        dest: scripts/switch_sync_repo.R
+    repos: |
+      jhudsl/OTTR_Quizzes
