--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -21,9 +21,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          
+
       # Delete the branch!
       - name: Delete branch locally and remotely
-        run: |
-          git branch -d preview-${{ github.event.pull_request.number }} || echo "No branch to delete"
-          git push origin --delete preview-${{ github.event.pull_request.number }} || echo "No branch to delete"
+        run: git push origin --delete preview-${{ github.event.pull_request.number }} || echo "No branch to delete"
