--- a/config_automation.yml
+++ b/config_automation.yml
@@ -1,7 +1,7 @@
 
 ##### Checks run at pull request #####
 # Check quiz formatting
-check-quizzes: yes
+check-quizzes: no
 # Check that urls in the content are not broken
 url-checker: yes
 # Render preview of content with changes (Rmd's and md's are checked)
@@ -11,10 +11,10 @@ spell-check: yes
 # Style any R code
 style-code: yes
 # Test build the docker image if any docker-relevant files have been changed
-docker-test: yes
+docker-test: no
 
 ##### Renderings run upon merge to main branch #####
 # Rendering each platform's content
 render-bookdown: yes
-render-leanpub: yes
-render-coursera: yes
+render-leanpub: no
+render-coursera: no
