--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -64,17 +64,19 @@ group:
       jhudsl/OTTR_Template_Website
 
   - files:
-      - source: .github/workflows/delete-preview.yml
-        dest: .github/workflows/delete-preview.yml
-      - source: .github/workflows/send-updates.yml
-        dest: .github/workflows/send-updates.yml
-      - source: .github/workflows/test-send-updates.yml
-        dest: .github/workflows/test-send-updates.yml
-      - source: scripts/make_screenshots.R
-        dest: scripts/make_screenshots.R
-      - source: scripts/spell-check.R
-        dest: scripts/spell-check.R
-      - source: scripts/switch_sync_repo.R
-        dest: scripts/switch_sync_repo.R
+    - source: config_automation.yml
+      dest: config_automation.yml
+    - source: .github/workflows/delete-preview.yml
+      dest: .github/workflows/delete-preview.yml
+    - source: .github/workflows/send-updates.yml
+      dest: .github/workflows/send-updates.yml
+    - source: .github/workflows/test-send-updates.yml
+      dest: .github/workflows/test-send-updates.yml
+    - source: scripts/make_screenshots.R
+      dest: scripts/make_screenshots.R
+    - source: scripts/spell-check.R
+      dest: scripts/spell-check.R
+    - source: scripts/switch_sync_repo.R
+      dest: scripts/switch_sync_repo.R
     repos: |
       jhudsl/OTTR_Quizzes
