--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -331,7 +331,7 @@ jobs:
           git add . || echo "no files to add"
           git commit -m "delete docs" || echo "no files to delete"
 
-          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
+          git merge -s recursive --strategy-option=ours origin/${{ github.head_ref }}
         shell: bash
 
       # Run bookdown rendering
