--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -324,14 +324,7 @@ jobs:
           branch_name='preview-${{ github.event.pull_request.number }}'
           git fetch --all
           git checkout $branch_name
-
-          # Start fresh and delete these files
-          rm -rf docs/* || echo "no docs/ folder to delete"
-          rm -rf *.rds || echo "no RDS file to delete"
-          git add . || echo "no files to add"
-          git commit -m "delete docs" || echo "no files to delete"
-
-          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
+          git merge -s recursive --strategy-option=ours origin/${{ github.head_ref }}
         shell: bash
 
       # Run bookdown rendering
