Have jhudsl/ottrpal pull from main

--- a/docker/Dockerfile_ottrpal
+++ b/docker/Dockerfile_ottrpal
@@ -1,4 +1,4 @@
-FROM jhudsl/course_template
+FROM jhudsl/course_template:main
 LABEL maintainer="cansav09@gmail.com"
 
 # Install apt-getable packages to start
