--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -29,8 +29,8 @@ jobs:
       toggle_bookdown: "${{ env.RENDER_BOOKDOWN }}"
       toggle_coursera: "${{ env.RENDER_COURSERA }}"
       toggle_leanpub: "${{ env.RENDER_LEANPUB }}"
-      rendering-docker-image: "${{ env.RENDERING_DOCKER_IMAGE }}"
-      
+      rendering_docker_image: "${{ env.RENDERING_DOCKER_IMAGE }}"
+
   render-bookdown:
     name: Render bookdown
     needs: yaml-check
@@ -48,6 +48,7 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
+
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
