--- a/config_automation.yml
+++ b/config_automation.yml
@@ -18,3 +18,7 @@ docker-test: no
 render-bookdown: yes
 render-leanpub: no
 render-coursera: no
+
+# What docker image should be used for rendering?
+# The default is jhudsl/course_template:main
+rendering-docker-image: 'jhudsl/course_template:main'
