--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -139,6 +139,10 @@ jobs:
       # Create screenshots
       - name: Run the screenshot creation
         run: |
+          # Remove old folder
+          rm -rf resources/chapt_screen_images
+
+          # Make new screenshots
           chapt_urls=$(Rscript --vanilla scripts/make_screenshots.R \
             --git_pat ${{ secrets.GH_PAT }} \
             --repo $GITHUB_REPOSITORY)
@@ -167,8 +171,6 @@ jobs:
       # Commit the rendered leanpub files
       - name: Commit rendered leanpub files
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
           git add --force manuscript/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
           git push --force origin main || echo "No changes to push"
@@ -202,8 +204,6 @@ jobs:
       # Commit the rendered bookdown files
       - name: Commit rendered Coursera files
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
           git add --force docs/no_toc/*
           git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
