--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -173,7 +173,7 @@ jobs:
         run: |
           git add --force manuscript/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
-          git push --force origin main || echo "No changes to push"
+          git push origin main || echo "No changes to push"
 
   render-coursera:
     name: Finish Coursera prep
