--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -74,8 +74,10 @@ jobs:
 
       # Commit the rendered bookdown files
       - name: Commit rendered bookdown files
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git remote set-url origin https://${secrets.GH_PAT}@github.com/${GITHUB_REPOSITORY}
+          git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force docs/*
           git commit -m 'Render bookdown' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
@@ -108,8 +110,10 @@ jobs:
 
       # Commit the TOC-less version files
       - name: Commit tocless bookdown files
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git remote set-url origin https://${secrets.GH_PAT}@github.com/${GITHUB_REPOSITORY}
+          git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force docs/no_toc*
           git commit -m 'Render toc-less' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
@@ -168,8 +172,10 @@ jobs:
 
       # Commit the rendered leanpub files
       - name: Commit rendered leanpub files
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git remote set-url origin https://${secrets.GH_PAT}@github.com/${GITHUB_REPOSITORY}
+          git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force manuscript/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
@@ -202,8 +208,10 @@ jobs:
 
       # Commit the rendered bookdown files
       - name: Commit rendered Coursera files
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git remote set-url origin https://${secrets.GH_PAT}@github.com/${GITHUB_REPOSITORY}
+          git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force docs/no_toc/*
           git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
           git push origin main || echo "No changes to push"
