--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -80,6 +80,7 @@ jobs:
           git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force docs/*
           git commit -m 'Render bookdown' || echo "No changes to commit"
+          git pull --allow-unrelated-histories --strategy-option=theirs
           git push origin main || echo "No changes to push"
 
   render-tocless:
@@ -116,6 +117,7 @@ jobs:
           git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force docs/no_toc*
           git commit -m 'Render toc-less' || echo "No changes to commit"
+          git pull --allow-unrelated-histories --strategy-option=theirs
           git push origin main || echo "No changes to push"
 
   render-leanpub:
@@ -178,6 +180,7 @@ jobs:
           git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force manuscript/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
+          git pull --allow-unrelated-histories --strategy-option=theirs
           git push origin main || echo "No changes to push"
 
   render-coursera:
@@ -214,4 +217,5 @@ jobs:
           git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force docs/no_toc/*
           git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
+          git pull --allow-unrelated-histories --strategy-option=theirs
           git push origin main || echo "No changes to push"
