--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -215,7 +215,7 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
-          git add --force docs/no_toc/*
+          git add --force .
           git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
           git pull --allow-unrelated-histories --strategy-option=theirs
           git push origin main || echo "No changes to push"
