--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -35,6 +35,7 @@ jobs:
 
   file-quizzes-pr:
     name: File _Quizzes Transfer PR
+    runs-on: ubuntu-latest
     needs: [yaml-check]
     if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes' || needs.yaml-check.outputs.toggle_leanpub == 'yes'}}
 
