Add a "no quizzes" handling ability as well as some merge conflict resolutions (#480)
* Add docker image as option

* Add a "no quizzes" option

* Add some ${{ }}

* Missed one

* Fix typo

* Test no quiz render

* Skip quiz_dir

* Update Leanpub/Coursera handling

* Fix file path

* Polish up screenshot making

* Make it not a force push

* Update file path

* git set-remote with PAT

* Add git set remote

* git pull settings

* git add all for coursera

* Update trigger for transfer

* set output_dir

* Update file handling

* add runs-on

* Update folders that are transferred

* Update PR comment too

* return defaults

* Restore quizzes

* switch theirs -> ours

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -33,8 +33,10 @@ jobs:
       toggle_leanpub: "${{ env.RENDER_LEANPUB }}"
 
 
-  file-bookdown-pr:
+  file-quizzes-pr:
+    name: File _Quizzes Transfer PR
     runs-on: ubuntu-latest
+    needs: [yaml-check]
     if: ${{needs.yaml-check.outputs.toggle_coursera == 'yes' || needs.yaml-check.outputs.toggle_leanpub == 'yes'}}
 
     steps:
