Rearrange some files for spell check

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -87,9 +87,9 @@ jobs:
         run: |
           results=$(Rscript "scripts/spell-check.R")
           echo "::set-output name=sp_chk_results::$results"
-          cat resources/spell_check_results.tsv
 
       - name: Archive spelling errors
+        if: ${{ steps.spell_check_run.outputs.sp_chk_results > 0 }}
         uses: actions/upload-artifact@v2
         with:
           name: spell-check-results
