--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -188,7 +188,7 @@ jobs:
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
 
-    - name: URLs-checker
+    - name: URLs checker
       uses: urlstechie/urlchecker-action@master
       with:
         # Delete the cloned repository after running URL checked (default is false)
@@ -202,9 +202,6 @@ jobs:
 
         # A comma separated links to exclude during URL checks
         exclude_urls: https://jhudatascience.org/{Course_Name}}
-
-        # choose if the force pass or not
-        force_pass : true
 
         # A path to a csv file to save results to
         save: resources/url_checks.tsv
