--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -183,10 +183,16 @@ jobs:
     - name: checkout repo
       uses: actions/checkout@v2
 
-    - name: Login as jhudsl-robot
-      run: |
-        git config --local user.email "itcrtrainingnetwork@gmail.com"
-        git config --local user.name "jhudsl-robot"
+      - name: Configure git
+        run: |
+          git config --local user.email "itcrtrainingnetwork@gmail.com"
+          git config --local user.name "jhudsl-robot"
+
+          branch_name='preview-${{ github.event.pull_request.number }}'
+          git fetch --all
+          git checkout $branch_name
+          git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }}
+        shell: bash
 
     - name: URLs checker
       uses: urlstechie/urlchecker-action@master
