--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -231,7 +231,8 @@ jobs:
         branch_name='preview-${{ github.event.pull_request.number }}'
         git add --force resources/url_checks.tsv || echo "No changes to commit"
         git commit -m 'Add URL check file' || echo "No changes to commit"
-        git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
+        git config pull.rebase false
+        git pull --set-upstream origin $branch_name --strategy-option=ours --allow-unrelated-histories
         git push --force origin $branch_name || echo "No changes to commit"
 
     - name: Build components of the spell check comment
