--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -33,6 +33,7 @@ group:
       jhudsl/Informatics_Research_Leadership
       jhudsl/Data_Management_for_Cancer_Research
       jhudsl/Computing_for_Cancer_Informatics
+      jhudsl/AnVIL_bookdown_style
       jhudsl/AnVIL_Book_Getting_Started
       jhudsl/AnVIL_Book_Instructor_Guide
       jhudsl/AnVIL_Book_WDL
